# coding_exercises

./: README.md  concurrent_vector.cpp  dragButton.py  stylesheetButton.py
BitField/: BitField.sln  BitField.vcxproj  main.cpp
CharPointer/: CharPointer.sln  CharPointer.vcxproj
Graph_201410/: Graph_201410.sdf  Graph_201410.sln  Graph_201410.vcxproj  Graph_201410.vcxproj.filters
InversionCounter/: InversionCounter.sln  InversionCounter.vcxproj  main.cpp
QuickSort_201406/: QuickSort_201406.sln  QuickSort_201406.vcxproj  main.cpp
cpp/: ArrayWrapperWithMoveSemantics  ArrayWrapperWithMoveSemantics.cpp  CMakeLists.txt  algopattern.txt  common.h  ex1_alignment.cpp  ex1_brk.cpp  ex1_gcc.cpp  ex1_heaplie.cpp  ex1_io.cpp  ex1_ioObjChar.cpp  ex1_linkedlist.cpp  ex1_malloc.cpp  ex1_mmap.cpp  ex1_num.cpp  ex1_pow.cpp  ex1_stackOverflow.cpp  ex2_arr.cpp  ex2_randomnum.cpp  ex2_sso.cpp  ex2_str2int.cpp  ex2_strc.cpp  ex2_string.cpp  ex2_vec_alloc.cpp  ex3_alloc.cpp  ex3_circular_buffer.cpp  ex3_container.cpp  ex3_queue.cpp  ex3_stack.cpp  ex3_std_algorithm.cpp  ex4_optional.cpp  ex4_stringop - 副本.cpp  ex4_stringop.cpp  ex5_auto_ptr.cpp  ex5_callback.cpp  ex5_function.cpp  ex5_objectinstance.cpp  ex5_ptr_shared.cpp  ex5_ptr_smart.cpp  ex5_ptr_unique.cpp  (+36 more)
cpp/ConsoleApplication1/: ConsoleApplication1.cpp  ConsoleApplication1.sln  ConsoleApplication1.vcxproj
cpp/ConsoleApplication1/Debug/: ConsoleApplication1.ilk  vc140.idb
cpp/ConsoleApplication1/Debug/ConsoleA.BFCB8F8D.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ConsoleApplication1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
cpp/ConsoleApplication1/Release/: ConsoleApplication1.iobj  ConsoleApplication1.ipdb
cpp/ConsoleApplication1/Release/ConsoleA.BFCB8F8D.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ConsoleApplication1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
cpp/dsal/: CMakeLists.txt  arraySubSetSum.cpp  binaryheap.cpp  bst.cpp  buildFIFOwith2stack.cpp  coinselection.cpp  common.hpp  countriesCount.cpp  dp_CoinsSelection.cpp  dp_michalsellwine.cpp  kwaymerge.cpp  lcAllElementsInTwoBST.cpp  lcBestBuySell.cpp  lcContainsDuplicateIII.cpp  lcEnumerateSubsets.cpp  lcGenerateParentheses.cpp  lcLargestTime.cpp  lcLinkedList.cpp  lcMinCostTickets.cpp  leastRecentUsedCache.cpp  longestIncreasingSeq.cpp  num2digits.cpp  sort.cpp  suffixarray.cpp  test2.cpp  treeCutting.cpp
cpp/dsal/algoTest1/: Project7.VC.db  Project7.sln  Project7.vcxproj  Project7.vcxproj.filters  Source.cpp  Source1.cpp  Source2.cpp  Source3.cpp  findIssues.cpp
cpp/hr/: attribute-parser.cpp  attribute-parser.txt
cpp/lc/: lc100.cpp  lc417.cpp  lc424.cpp  longestsubstr_k_distinct.cpp  maxsub_subarr_k.cpp  minsize_subarr_sum.cpp
cpp/learnRestSDK/: learnRestSDK.VC.VC.opendb  learnRestSDK.VC.db  learnRestSDK.sln  learnRestSDK.vcxproj
cpp/test_configparser/: CMakeLists.txt  CRBCfg.cpp  CRBCfg.hpp  CfgTest.cpp  test.cfg  test.cfg.bk
cpp/test_configparser2/: CMakeLists.txt  CRBCfg.cpp  CRBCfg.hpp  CfgTest.cpp  canjiang_Linear solution of the generic config question.docx
cpp/util/: queue.h  string.h
db_examples/python/: ex1_cx_oracle.py  ex2_cx_oracle_insert.py  ex3_cx_oracle_insert_pandas.py  runTest.sh  runTest_log
db_examples/python/data/: closing_quotation.csv
dotNet/WebRequest/ToDoWebScrape/: LiteCsvParser.cs  Program.cs  ToDoWebScrape.csproj  ToDoWebScrape.sln  racing_historical_results.csv  racing_historical_results_english.csv  racing_historical_results_english_addLength.csv
dotNet/WindowsFormsApplication1/: Form1.cs  WindowsFormsApplication1.csproj  WindowsFormsApplication1.sln
dotNet/WindowsFormsApplication1/Properties/: AssemblyInfo.cs
glExample/: CMakeLists.txt  mainTexExample.cpp
glExample/gridCube/: CMakeLists.txt  mainGridCube.cpp
glExample/mainTexExample/: CMakeLists.txt
maya_devkit_sineNode/: sineNode.cpp  sineNode.sln  sineNode.vcxproj
maya_py_sineNodeDegree/: sineNodeDegree.py
maya_rbfNode/: matrix.h  pluginMain.cpp  rbfInterpolatorNode.cpp  rbfInterpolatorNode.h  rbfInterpolatorNode.vcxproj
maya_rbfNode-201512172248-fitting not interp/: ConvertToDoubleArrayNode.cpp  ConvertToDoubleArrayNode.h  rbfInterpolatorNode.cpp  rbfInterpolatorNode.h  rbfInterpolatorNode.vcxproj
maya_rbfNode-201512172248-fitting not interp/Debug/: rbfInterpolatorNode.exp  rbfInterpolatorNode.lib
maya_rbfNode-201512172248-fitting not interp/x64/Debug/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rbfInterpolatorNode.write.1.tlog
maya_rbfNode/Debug/: rbfInterpolatorNode.exp  rbfInterpolatorNode.lib
maya_rbfNode/x64/Debug/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  rbfInterpolatorNode.write.1.tlog
maya_simpleNode/: simpleNode.cpp  simpleNode.h  simpleNode.vcxproj
maya_simpleNode/Debug/: simpleNode.exp  simpleNode.lib
pointer_unref/: CMakeLists.txt  ex1_pointerAddr.cpp  ex2_charPointer.cpp  main.cpp  pointer_unref.sln  pointer_unref.vcxproj
pointer_unref/Debug/: pointer_unref.ilk  vc140.idb
py/ex_importmudolepackage/: aa.py  readme.txt
qtLayoutDemo1/: CMakeLists.txt  widget.cpp  widget.h
qtexamples/: CMakeLists.txt
qtexamples/sqlTableModel/: CMakeLists.txt  main.cpp
qtexamples/testFortuneclient/: CMakeLists.txt  main.cpp
qtexamples/testFortuneserver/: CMakeLists.txt  main.cpp  server.cpp  server.h
qtexamples/testQBarSeries/: CMakeLists.txt  main.cpp
qtexamples/thread_detach_crash/: CMakeLists.txt  main.cpp
r/rproject1/: .Rhistory  rproject1.rxproj  rproject1.sln  script.R
r/rproject2hrace/: .Rhistory  Solution1.sln  rproject2hrace.rxproj
sorting/: sorting.psess  sorting.sln  sorting160823.vspx
sorting/Debug/: sorting.ilk
sorting/sorting/: main.cpp  sorting.vcxproj
svgDemo/: main.cpp  mainwindow.cpp  mainwindow.h  readme.md  svgDemo.pro
thread/: CMakeLists.txt  ex1_hello.cpp  ex2_protectSharedData.cpp  ex3_cppRefConditionVaribale.cpp  ex4_eventLoop.cpp  ex5_spsc.cpp  ex5_stdqueue.cpp  ex5_stdqueuemutex.cpp
(+42 files in other folders)
