
cmake_minimum_required(VERSION 2.8.11)
 
project(cpp_examples)

add_executable(ex1_linkedlist ex1_linkedlist.cpp)  
add_executable(ex2_randomnum ex2_randomnum.cpp)  
add_executable(ex3_queue ex3_queue.cpp)  
add_executable(ex4_stringop ex4_stringop.cpp)  
add_executable(ex5_binarytreeop ex5_binarytreeop.cpp)  
