
cmake_minimum_required(VERSION 2.8.11)
set(CMAKE_CXX_STANDARD_REQUIRED ON) 
set(CMAKE_CXX_STANDARD 17)

project(cpp_examples)

add_executable(ex1_gcc ex1_gcc.cpp)
add_executable(ex1_num ex1_num.cpp)
add_executable(ex1_io ex1_io.cpp)
add_executable(ex1_ioObjChar ex1_ioObjChar.cpp)
add_executable(ex2_arr ex2_arr.cpp)
add_executable(ex2_randomnum ex2_randomnum.cpp) 
add_executable(ex2_string ex2_string.cpp)
add_executable(ex3_circular_buffer ex3_circular_buffer.cpp)
add_executable(ex3_container ex3_container.cpp)  
add_executable(ex3_stack ex3_stack.cpp)  
add_executable(ex3_sort ex3_sort.cpp)  
add_executable(ex3_std_algorithm ex3_std_algorithm.cpp)
add_executable(ex4_stringop ex4_stringop.cpp) 
add_executable(ex5_objectinstance ex5_objectinstance.cpp)
add_executable(ex5_rvalueref ex5_rvalueref.cpp)
add_executable(ex8_atomic_store ex8_atomic_store.cpp)
add_executable(ex8_interthreadlatency ex8_interthreadlatency.cpp)
add_executable(ex8_producerconsumer_cv1 ex8_producerconsumer_cv1.cpp)   
add_executable(ex8_producerconsumer_cv2 ex8_producerconsumer_cv2.cpp)   
add_executable(ex8_semaphore ex8_semaphore.cpp)   
add_executable(ex8_spinlock ex8_spinlock.cpp)   
add_executable(ex8_threadinthread ex8_threadinthread.cpp)   
add_executable(ex8_threadlock ex8_threadlock.cpp)  
add_executable(ex8_zerooddeven ex8_zerooddeven.cpp)
add_executable(ex9_has_func ex9_has_func.cpp) 
add_executable(ex9_metaart ex9_metaart.cpp)
add_executable(ex9_tuple ex9_tuple.cpp)

add_executable(ey1_socket ey1_socket.cpp)
add_executable(ey1_socket2select ey1_socket2select.cpp)
add_executable(ey1_socket3beej ey1_socket3beej.cpp)
add_executable(ey1_socket3beejudp ey1_socket3beejudp.cpp)

add_executable(test_coinmap test_coinmap.cpp)
add_executable(test_ship test_ship.cpp)
add_executable(test_uniq test_uniq.cpp)
add_executable(test_FizzBuzz test_FizzBuzz.cpp)
add_executable(test_sandspread test_sandspread.cpp) 

add_subdirectory(dsal)
# 
add_subdirectory(test_configparser)
add_subdirectory(test_configparser2)
