
add_executable(lcLinkedList lcLinkedList.cpp) 
add_executable(lcTree lcTree.cpp lcTree.h)  
add_executable(kwaymerge kwaymerge.cpp)
add_executable(binaryheap binaryheap.cpp)
add_executable(bst bst.cpp)
add_executable(suffixarray suffixarray.cpp)

# dp 
add_executable(coinselection coinselection.cpp)
add_executable(countriesCount countriesCount.cpp)
add_executable(lcBestBuySell lcBestBuySell.cpp)
add_executable(lcMinCostTickets lcMinCostTickets.cpp)
add_executable(leastRecentUsedCache leastRecentUsedCache.cpp)
add_executable(longestIncreasingSeq longestIncreasingSeq.cpp)
add_executable(arraySubSetSum arraySubSetSum.cpp)

# bt
add_executable(lcEnumerateSubsets lcEnumerateSubsets.cpp)
add_executable(lcGenerateParentheses lcGenerateParentheses.cpp)

# unknown

add_executable(lcLargestTime lcLargestTime.cpp)
add_executable(lcContainsDuplicateIII lcContainsDuplicateIII.cpp)
add_executable(lcAllElementsInTwoBST lcAllElementsInTwoBST.cpp)
